--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						<!-- -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005 -->
+						-Xdebug -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+					</jvmArguments>
+				</configuration>
 			</plugin>
 			
 			<plugin>
