--- a/Dockerfile.traditional
+++ b/Dockerfile.traditional
@@ -1,16 +1,16 @@
 FROM azul/zulu-openjdk-alpine:17 AS builder
-WORKDIR /app
-COPY .mvn/ .mvn
+WORKDIR /tmp
+COPY .mvn .mvn
 COPY mvnw pom.xml ./
 RUN ./mvnw dependency:resolve
-COPY src ./src
+COPY src src
 RUN ./mvnw clean package -DskipTests -Djacoco.skip
 
 FROM azul/zulu-openjdk-alpine:17-jre
-EXPOSE 8080
+WORKDIR /app
+ENV JAR_FILE=target/*.jar
+COPY --from=builder /tmp/target/$JAR_FILE app.jar
 # "-Dserver.port=$PORT", "-Dspring.profiles.active=test"
 ENV JAVA_OPTS="-XX:+UseContainerSupport -Xmx300m -Xss512k -XX:CICompilerCount=2 -Dfile.encoding=UTF-8"
-ARG JAR_FILE=demo-0.0.1.jar
-WORKDIR /app
-COPY --from=builder /app/target/${JAR_FILE} app.jar
-ENTRYPOINT java $JAVA_OPTS -jar app.jar
+ENTRYPOINT java -jar app.jar $JAVA_OPTS
+EXPOSE 8080
