--- a/Dockerfile.traditional
+++ b/Dockerfile.traditional
@@ -5,11 +5,11 @@ COPY mvnw pom.xml ./
 RUN ./mvnw dependency:resolve
 COPY src src
 RUN ./mvnw clean package -DskipTests -Djacoco.skip
+RUN mv $(ls target/*.jar) target/app.jar
 
-FROM azul/zulu-openjdk-alpine:17-jre
+FROM azul/zulu-openjdk-alpine:17-jre AS runner
 WORKDIR /app
-ENV JAR_FILE=target/*.jar
-COPY --from=builder /tmp/target/$JAR_FILE app.jar
+COPY --from=builder /tmp/target/app.jar .
 # "-Dserver.port=$PORT", "-Dspring.profiles.active=test"
 ENV JAVA_OPTS="-XX:+UseContainerSupport -Xmx300m -Xss512k -XX:CICompilerCount=2 -Dfile.encoding=UTF-8"
 ENTRYPOINT java -jar app.jar $JAVA_OPTS
