docker build  improvements

--- a/Dockerfile.jarfile
+++ b/Dockerfile.jarfile
@@ -1,22 +1,21 @@
-FROM bellsoft/liberica-runtime-container:jdk-17-slim-musl AS build
-WORKDIR /build
+FROM ghcr.io/graalvm/graalvm-ce:ol9-java17 AS build
+WORKDIR /tmp
 COPY --link .mvn/ .mvn
 COPY --link mvnw pom.xml ./
-RUN ./mvnw dependency:resolve
+RUN --mount=type=cache,target=/root/.m2 ./mvnw dependency:resolve
 COPY --link src/ src
-RUN --mount=type=cache,target=/root/.m2 ./mvnw clean package -DskipTests -Djacoco.skip
+RUN --mount=type=cache,target=/root/.m2 ./mvnw package -DskipTests -Djacoco.skip
 RUN mv $(ls target/*.jar) target/app.jar
 
 FROM bellsoft/liberica-runtime-container:jre-17-slim-musl
-VOLUME /tmp
 RUN addgroup --system javauser && \
    adduser -S -s /usr/sbin/nologin -D -H -G javauser javauser  # alpine
    # adduser --system --disabled-login --disabled-password --no-create-home --ingroup javauser javauser
-WORKDIR /app
-ARG DEPENDENCY=/build/target
+ARG DEPENDENCY=/tmp/target
 COPY --link --chown=javauser --from=build ${DEPENDENCY}/app.jar ./
-USER javauser
 ENV JAVA_OPTS="-XX:+UseContainerSupport -Xmx300m -Xss512k -XX:CICompilerCount=2 -Dfile.encoding=UTF-8"
+USER javauser
+WORKDIR /app
 CMD /bin/sh -c "java \
    $JAVA_OPTS \
    -Dserver.port=$PORT \
