--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,9 @@
 						<enabled>true</enabled>
 					</layers>
 					<jvmArguments>
-						<!-- -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005 -->
+						<!-- -Dserver.port=8080 -->
+						<!-- -XX:+UseContainerSupport -Xmx300m -Xss512k -XX:CICompilerCount=2 -Dfile.encoding=UTF-8 -->
+						<!-- -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=*:5005 -->					
 						-Xdebug -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 
 					</jvmArguments>
 				</configuration>
