--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,3 @@
-
 # Connection
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
@@ -9,6 +8,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 
-# # Show SQL
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
+# Show SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
